--- a/content/01_journal/Reporting_Tools.qmd
+++ b/content/01_journal/Reporting_Tools.qmd
@@ -3,67 +3,54 @@ title: "Reporting Tools"
 author: "Felix Adamaszek"
 ---
 
-::: callout-note
-callout-note
-:::
+``````{r}
+# INTERACTIVE PLOTS ----
 
-This is a `.qmd` file. It is plain text with special features. Any time you write just like this, it will be compiled to normal text in the website. If you put a \# in front of your text, it will create a top level-header.
+# GOAL: DEVELOP INTERACTIVE PLOTS FOR A SALES REPORT
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+# LIBRARIES & DATA ----
 
-# Text Formatting
+# Main
+library(tidyverse)
+library(lubridate)
 
-*italics* and **bold**
+# Visualization
+library(plotly)
 
-superscript^2^ / subscript~2~
+bikes_tbl      <- readRDS("/Users/felixadamaszek/Documents/GitHub/ss23-bdml-FelixAdams1827/ss23-bbdp-FelixAdams1827/content/01_journal/bike data/bikes_tbl.rds")
+bikeshops_tbl  <- readRDS("/Users/felixadamaszek/Documents/GitHub/ss23-bdml-FelixAdams1827/ss23-bbdp-FelixAdams1827/content/01_journal/bike data/bikeshops_tbl.rds")
+orderlines_tbl <- readRDS("/Users/felixadamaszek/Documents/GitHub/ss23-bdml-FelixAdams1827/ss23-bbdp-FelixAdams1827/content/01_journal/bike data/orderlines_tbl.rds")
 
-~~strikethrough~~
+bike_orderlines_tbl <- orderlines_tbl %>%
+    left_join(bikes_tbl,     by = c("product_id" = "bike_id")) %>%
+    left_join(bikeshops_tbl, by = c("customer_id" = "bikeshop_id")) %>%
+    
+    # Add the total price
+    mutate(total_price = price_euro * quantity)
 
-`verbatim code`
+format_to_euro <- function(x, suffix = " €") {
 
-> Blockquote
+  scales::dollar(x,
+                 suffix       = suffix,
+                 prefix       = "",
+                 big.mark     = ".",
+                 decimal.mark = ",")
+}
 
-# Headings
+euro_format <- function(scale        = 1,
+                        prefix       = "",
+                        suffix       = " €",
+                        big.mark     = ".",
+                        decimal.mark = ",") {
 
-## Header 2
-### Header 3
-#### Header 4
-##### Header 5
-###### Header 6
+  scales::dollar_format(suffix       = suffix,
+                        prefix       = prefix,
+                        big.mark     = big.mark,
+                        decimal.mark = decimal.mark,
+                        scale        = scale)
 
-# Links & Images
-
-<https://quarto.org>
-
-[Quarto](https://quarto.org)
-
-![Caption](../../assets/img/elephant.png)
-
-[![Caption](../../assets/img/elephant.png)](https://quarto.org)
-
-[![Caption](../../assets/img/elephant.png)](https://quarto.org "An elephant")
-
-
-# Lists
-
-* unordered list
-    + sub-item 1
-    + sub-item 2
-        - sub-sub-item 1
-        
-*   item 2
-
-    Continued (indent 4 spaces)
+}
     
     
-1. ordered list
-2. item 2
-    i) sub-item 1
-         A.  sub-sub-item 1
-         
 
-
-```{r}
-1 + 1
 ```
-
