--- a/content/sales_dashboard_shiny/sales_dashboard_shiny.Rmd
+++ b/content/sales_dashboard_shiny/sales_dashboard_shiny.Rmd
@@ -1,31 +1,73 @@
 ---
-title: "Shiny Tutorial by Felix Adamaszek [Matr. Nr. 52505]"
-output: 
+title: "Shiny Sales Dashboard by Felix Adamaszek [Matr. Nr. 52505]"
+output:
   flexdashboard::flex_dashboard:
     orientation: columns
     vertical_layout: fill
 runtime: shiny
+resource_files:
+- bikeshops_tbl.rds
+- gadm36_DEU_1_sp.rds
+- bikes_tbl.rds
+- orderlines_tbl.rds
 ---
 
 ```{r setup, include=FALSE}
-# Shiny
 library(flexdashboard)
 library(shiny)
 library(DT)
-
-# Core
 library(tidyverse)
 library(lubridate)
+library(plotly)
+library(raster)
+library(sf)
+library(shinyWidgets)
 ```
 
 ```{r}
-# Make data
-set.seed(123)
-sales_data_tbl <- tibble(
-  date  = seq.Date(from = ymd("2018-01-01"), to = today(), length.out = 90),
-  class = sample(c("marketing", "sales", "research"), size = 90, replace = TRUE),
-  sales = runif(n = 90, min = 1, max = 100)
-)
+
+# Currency formatting
+
+format_to_euro <- function(x, suffix = " €") {
+
+  scales::dollar(x,
+                 suffix       = suffix,
+                 prefix       = "",
+                 big.mark     = ".",
+                 decimal.mark = ",")
+}
+
+euro_format <- function(scale        = 1,
+                        prefix       = "",
+                        suffix       = " €",
+                        big.mark     = ".",
+                        decimal.mark = ",") {
+
+  scales::dollar_format(suffix       = suffix,
+                        prefix       = prefix,
+                        big.mark     = big.mark,
+                        decimal.mark = decimal.mark,
+                        scale        = scale)
+
+}
+
+# Bike data
+bikes_tbl      <- readRDS("/rsconnect/bikes_tbl.rds")
+bikeshops_tbl  <- readRDS("/rsconnect/bikeshops_tbl.rds")
+orderlines_tbl <- readRDS("/rsconnect/orderlines_tbl.rds")
+
+bike_orderlines_tbl <- orderlines_tbl %>%
+    left_join(bikes_tbl,     by = c("product_id" = "bike_id")) %>%
+    left_join(bikeshops_tbl, by = c("customer_id" = "bikeshop_id")) %>%
+    mutate(total_price = price_euro * quantity)
+
+# German spatial data
+germany_sp <- getData('GADM', country='DE', level=1)
+
+# Convert SpatialPolygonsDataFrame to an sf dataframe
+germany_sf <- st_as_sf(germany_sp) %>% 
+                  # Add english names
+                  mutate(VARNAME_1 = ifelse(is.na(VARNAME_1), NAME_1, VARNAME_1)) 
 ```
 
 
@@ -33,137 +75,154 @@ sales_data_tbl <- tibble(
 
 Sidebar {.sidebar}
 ------------------------
-
 ```{r}
-# Inputs
-checkboxGroupInput(inputId = "checkbox_group", 
-                   label   = h4("Checkbox Group"), 
-                   choices = c("Marketing" = "marketing",
-                               "R&D"       = "research",
-                               "Sales"     = "sales"), 
-                   selected = c("marketing", "research", "sales"))
+pickerInput(
+  inputId = "id", 
+  label = "Select:", 
+  choices = month.name, 
+  options = pickerOptions(
+    actionsBox = TRUE, 
+    size = 10,
+    selectedTextFormat = "count > 3"
+  ), 
+  multiple = TRUE
+)
 
-dateRangeInput(inputId = "date_range", 
-               label   = h4("Date Range"), 
-               start   = "2018-01-01", 
-               end     = today(),          # "2019-05-10" 
-               min     = min(sales_data_tbl$date), 
-               max     = max(sales_data_tbl$date), 
-               startview = "year")
+prettyCheckboxGroup(
+  inputId = "category_1",
+  label = "Bike Type: ",
+  choices = c("Road", "E-Bikes", "Gravel", "Hybrid / City", "Mountain"),
+  outline = TRUE,
+  plain = TRUE,
+  status = "primary",
+  icon = icon("check")
+)
 
-sliderInput(inputId = "slider_input", 
-            label   = h4("Slider Range"), 
-            min     = 1,
-            max     = 100, 
-            value   = c(40, 60), 
-            step    = 1, 
-            round   = TRUE, 
-            pre     = "$")
+prettyRadioButtons(
+  inputId = "category_2",
+  label = "Bike Family: ",
+  choices = c("Adventure", "All-Road", "City", "Cross-Country", "Cyclocross", "Dirt Jump", "Downhill", "E-City", "E-Fitness", "E-Gravel", "E-Mountain", "E-Road", "E-Trekking", "Endurance", "Enduro", "Fat Bikes", "Race", "Touring", "Trail", "	
+Triathlon Bike"),
+  outline = TRUE,
+  plain = TRUE,
+  status = "primary",
+  icon = icon("check")
+)
+
 ```
 
+Column {data-width=625}
+-----------------------
 
+### By State
 ```{r}
-# Reset Button
-actionButton(inputId = "reset", 
-             label   = "Reset", 
-             icon    = icon("sync"))
-
-observeEvent(eventExpr = input$reset, handlerExpr = {
-  
-  updateCheckboxGroupInput(session  = session, 
-                           inputId  = "checkbox_group", 
-                           selected = c("marketing", "research", "sales"))
-  
-  updateDateRangeInput(session = session, 
-                       inputId = "date_range", 
-                       start   = min(sales_data_tbl$date), 
-                       end     = today())
-  
-  updateSliderInput(session = session, 
-                    inputId = "slider_input", 
-                    value   = c(40, 60))
-  
-  
-})
+geo_plot_tbl <- bike_orderlines_tbl %>% 
+                  group_by(state) %>%
+                  summarise(total_revenue = sum(total_price)) %>%
+                  ungroup() %>%
+                  right_join(germany_sf, by = c("state" = "VARNAME_1")) %>% 
+                  mutate(total_revenue = ifelse(is.na(total_revenue), 0, total_revenue)) %>% 
+                  mutate(label_text = str_glue("State: {state}
+                                         Revenue: {format_to_euro(total_revenue)}")) %>% 
+                  # Convert back to an sf object, that can be plotted
+                  st_as_sf()
 ```
 
+```{r}
+plot_ly(geo_plot_tbl, 
+        split      = ~NAME_1, 
+        color      = ~total_revenue,
+        colors     = "Blues",
+        stroke     = I("black"),
+        hoverinfo  = 'text', 
+        text       = ~label_text, 
+        hoveron    = "fills", 
+        showlegend = FALSE) 
+```
 
 
 Column {data-width=500}
 -----------------------
 
-### Section - Checkbox Output
-
 ```{r}
-output$checkbox_values <- renderPrint(input$checkbox_group)
 
-textOutput(outputId = "checkbox_values")
-```
-
-### Section - Date Range
-
-```{r}
-output$date_range_values <- renderPrint(input$date_range)
-
-textOutput(outputId = "date_range_values")
-```
-
-### Section - Slider Output
-
-```{r}
-output$slider_values <- renderPrint(input$slider_input)
-
-textOutput(outputId = "slider_values")
-```
+# Bike data
+bikes_tbl      <- readRDS("/rsconnect/bikes_tbl.rds")
+bikeshops_tbl  <- readRDS("/rsconnect/bikeshops_tbl.rds")
+orderlines_tbl <- readRDS("/rsconnect/orderlines_tbl.rds")
 
 
-Column {data-width=750}
------------------------
+bike_orderlines_tbl <- orderlines_tbl %>%
+    left_join(bikes_tbl,     by = c("product_id" = "bike_id")) %>%
+    left_join(bikeshops_tbl, by = c("customer_id" = "bikeshop_id")) %>%
+    mutate(total_price = price_euro * quantity)
 
-```{r}
-# Reactive Filter
-sales_data_filtered <- reactive({
+format_to_euro <- function(x, suffix = " €") {
+
+  scales::dollar(x,
+                 suffix       = suffix,
+                 prefix       = "",
+                 big.mark     = ".",
+                 decimal.mark = ",")
+}
+
+euro_format <- function(scale        = 1,
+                        prefix       = "",
+                        suffix       = " €",
+                        big.mark     = ".",
+                        decimal.mark = ",") {
+
+  scales::dollar_format(suffix       = suffix,
+                        prefix       = prefix,
+                        big.mark     = big.mark,
+                        decimal.mark = decimal.mark,
+                        scale        = scale)
+
+}
+
+
+# 1.0 TOTAL SALES BY MONTH ----
+
+# 1.1 Preparing Time Series Data ----
+# Monthly
+
+total_sales_m_tbl <- bike_orderlines_tbl %>%
+
+
+  mutate(date_rounded = floor_date(order_date, unit = "month")) %>%
+
+  group_by(date_rounded) %>%
+  summarise(total_sales = sum(total_price)) %>%
+  ungroup() %>%
+
+  mutate(label_text = str_glue("Sales: {format_to_euro(total_sales)}
+                                 Date: {date_rounded %>% format('%B %Y')}"))
+
+
+
+# 1.2 Interactive Plot ----
+
+g1 <- total_sales_m_tbl %>%
+  ggplot(aes(x = date_rounded, y = total_sales)) +
+
+  # Geoms
+  geom_point() +
+  geom_smooth(method = "loess", span = 0.2) +
+
+  # Formatting
   
-  sales_data_tbl %>%
-    filter(class %in% input$checkbox_group) %>%
-    filter(date %>% between(left  = ymd(input$date_range[1]), 
-                            right = ymd(input$date_range[2]))) %>%
-    filter(sales %>% between(left  = input$slider_input[1],
-                             right = input$slider_input[2]))
-})
-
-```
-
-
-### Section - Reactive Output
-
-```{r}
-#  renderPrint( sales_data_filtered() )
-
-output$dt_output_1 <- DT::renderDataTable(expr = {
+  # Convert scale to euro format
+  scale_y_continuous(labels = euro_format()) +
   
-  sales_data_filtered() %>%
-    mutate(sales = scales::dollar(sales))
+  # Make sure 0 will always be shown (even if the data is far away)
+  expand_limits(y = 0) +
   
-}, options = list(scrollY = "250px"))
+  labs(
+    title = "Total Sales",
+    y = "Revenue (EUR)",
+    x = ""
+  )
 
-DTOutput(outputId = "dt_output_1")
-```
-
-
-### Section - Reactive Summary
-
-```{r}
-output$dt_output_2 <- DT::renderDataTable(expr = {
-  
-  sales_data_filtered() %>%
-    group_by(class) %>%
-    summarise(total_revenue = sum(sales)) %>%
-    ungroup() %>%
-    mutate(total_revenue = scales::dollar(total_revenue))
-  
-}, options = list(scrollY = "250px"))
-
-DTOutput(outputId = "dt_output_2")
+g1
 
 ```
